2011-07-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* honor colors in configuration record

2011-07-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* honor fonts in configuration record

2011-07-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* configuration dialog layout finished, no effects yet

2011-07-23  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* help and exit menu items

2011-07-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* add menu with about dialog

2011-07-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix different line length problem

2011-07-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* invert dragging direction

2011-07-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* move proof tree by dragging with mouse 1

2011-07-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* internal documentation of main, input

2011-07-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* display external node windows on double click or shift
	  click

2011-07-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve current node positioning

2011-07-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix resize behaviour of node windows
	* add message label with some status information

2011-06-14  Hendrik Tews <prooftree@askra.de>

	* release version 0.4 on 2011-06-14 11:26:01 UTC

2011-06-14  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-06-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* another release fix

2011-06-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* small release fix

2011-06-08  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-06-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update coq version number in README's

2011-05-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* color cheated commands/branches in red

2011-05-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* clone button

2011-05-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update existentials in external windows
