@@ -1,5 +1,9 @@
 2011-07-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* honor tooltips in configuration record
+
+2011-07-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* honor colors in configuration record
 
 2011-07-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>
